--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -48,13 +48,7 @@ tasks:
     desc: Run tests
     dir: "{{.SRC_DIR}}"
     cmds:
-      - go test -race -coverprofile=coverage.txt -covermode=atomic -v ./common/... {{ .CLI_ARGS }}
-
-  test-integration:
-    desc: Run Integration tests
-    dir: "{{.SRC_DIR}}"
-    cmds:
-      - go test -race -coverprofile=coverage.txt -covermode=atomic -v ./cmd/... {{ .CLI_ARGS }}
+      - go test -race -coverprofile=coverage.txt -covermode=atomic {{ .CLI_ARGS }}
 
   update-opslevel-go:
     desc: Update opslevel-go version to latest release
